bug fix in navbar over scrollbar

--- a/app/css/index.css
+++ b/app/css/index.css
@@ -54,6 +54,8 @@ body::-webkit-scrollbar-track
 	z-index: 10;
 }
 
+
+
 /* body::-webkit-scrollbar
 {
 	z-index: 5;
@@ -495,6 +497,7 @@ nav .nav-link:hover {
 
 .navbar {
   background-color: rgba(255, 255, 255, 0.05);
+  width:100%;
 }
 
 nav .nav-link:hover {
